--- a/CSS/histoy.CSS
+++ b/CSS/histoy.CSS
@@ -36,7 +36,6 @@
     display: block;
     text-align: center;
     line-height: 80px;
-    font-size: 14px;
     color: white;
     border-radius: 8px;
     top: 50%;
@@ -100,6 +99,7 @@
     font-size: 1.5rem;
     font-weight: bold;
     color: #333;
+    float: right;
 }
 
 .popupimg {
