--- a/CSS/testimoniosPopUp.css
+++ b/CSS/testimoniosPopUp.css
@@ -34,8 +34,9 @@
     position: static;
     top: 10px;
     right: 10px;
-    font-size: 30px;
+    font-size: var(--font-size-h5);
     cursor: pointer;
+    color: var(--color1);
 }
 
 /* Estilo del video */
